--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-facebook-login": "^4.1.1",
+    "react-native": "^0.58.4",
+    "react-native-fbsdk": "^0.8.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3"
   },
