--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && yarn install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build"
+  },
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
+  },
+  "dependencies": {
+    "express": "^4.16.3",
+    "if-env": "^1.0.4",
+    "mysql2": "^1.6.5"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/jrblake1984/date-app.git"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/jrblake1984/date-app/issues"
-  },
-  "homepage": "https://github.com/jrblake1984/date-app#readme",
-  "dependencies": {
-    "express": "^4.16.4",
-    "mysql2": "^1.6.5"
-  }
+  "homepage": "https://github.com/jrblake1984/date-app#readme"
 }
