--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mysql2": "^1.6.5",
     "react": "^16.8.1",
     "react-facebook-login": "^4.1.1",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "sequelize": "^4.42.0"
   },
   "repository": {
     "type": "git",
