--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "if-env": "^1.0.4",
     "mysql2": "^1.6.5",
     "react": "^16.8.1",
+    "react-compound-slider": "^0.20.1",
     "react-facebook-login": "^4.1.1",
+    "react-native-range-slider": "^0.1.1",
     "react-router-dom": "^4.3.1"
   },
   "repository": {
